@@ -1,3 +1,4 @@
+	copyright updated to 2004
 v 1.2.4a
 	converted to xhtml
 v 1.2.4
